<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <!-- Change log -->
    
    <!-- V3.0 Beta -->
    <string name="version3.0Heading">V3.0 Beta</string>
    <string name="version3.0Log">-In-app full change log\n-Updated app logo to match with playstore icon\n-Major changes in \'about\' section</string>  
    
    <!-- V2.9 Beta -->
    <string name="version2.9Heading">V2.9 Beta</string>
    <string name="version2.9Log">-Select-able text in forums.\nA user suggestion. Thanks.</string>     
    <!-- V2.8 Beta -->
    <string name="version2.8Heading">V2.8 Beta</string>
    <string name="version2.8Log">-Removed startapp (the malware that you hear about in comments)</string>     
    <!-- V2.7 Beta -->
    <string name="version2.7Heading">V2.5 Beta</string>
    <string name="version2.7Log">-Updated target to latest android version. A new look !</string>  
    <!-- V2.6.1 Beta -->
    <string name="version2.6.1Heading">V2.6.1 Beta</string>
    <string name="version2.6.1Log">-Changes to Notice</string>  
    <!-- V2.6 Beta -->
    <string name="version2.6Heading">V2.6 Beta</string>
    <string name="version2.6Log">--Included StartApp service</string>  
    <!-- V2.5 Beta -->
    <string name="version2.5Heading">V2.5 Beta</string>
    <string name="version2.5Log">-Fixed filelisting force close issue for Moodle 2.3</string>  
    <!-- V2.4 Beta -->
    <string name="version2.4Heading">V2.4 Beta</string>
    <string name="version2.4Log">-Minor fixes</string>  
    <!-- V2.3 Beta -->
    <string name="version2.3Heading">V2.3 Beta</string>
    <string name="version2.3Log">-Minor fixes</string>  
    <!-- V2.2 Beta -->
    <string name="version2.2Heading">V2.2 Beta</string>
    <string name="version2.2Log">-Minor fixes</string>  
    <!-- V2.1 Beta -->
    <string name="version2.1Heading">V2.1 Beta</string>
    <string name="version2.1Log">-Improved app logo\n-14% reduction in app size!</string>    
    <!-- V2.0 Beta -->
    <string name="version2.0Heading">V2.0 Beta</string>
    <string name="version2.0Log">-Few changes to file download code</string>
    
    <!-- V1.9 Beta -->
    <string name="version1.9Heading">V1.9 Beta</string>
    <string name="version1.9Log">-UI improvement\n-Download issue on IITB moodle fixed</string>
    <!-- V1.8 Beta -->
    <string name="version1.8Heading">V1.8 Beta</string>
    <string name="version1.8Log">-Minor changes to parsing strings</string>
    <!-- V1.7 Beta -->
    <string name="version1.7Heading">V1.7 Beta</string>
    <string name="version1.7Log">-Fixed an FC, occurring while fetching files some particular courses</string>
    <!-- V1.6 Beta -->
    <string name="version1.6Heading">V1.6 Beta</string>
    <string name="version1.6Log">-In-app rating option</string>
    <!-- V1.5 Beta -->
    <string name="version1.5Heading">V1.5 Beta</string>
    <string name="version1.5Log">-Minor fixes</string>
    <!-- V1.4 Beta -->
    <string name="version1.4Heading">V1.4 Beta</string>
    <string name="version1.4Log">-Added in-app help section</string>
    <!-- V1.3 Beta -->
    <string name="version1.3Heading">V1.3 Beta</string>
    <string name="version1.3Log">-Minor fixes</string>
    <!-- V1.2 Beta -->
    <string name="version1.2Heading">V1.2 Beta</string>
    <string name="version1.2Log">-Fixed many fc issues\n-multiple download support (up to 2)\n-Auto saving of credentials</string>
    <!-- V1.1 Beta -->
    <string name="version1.1Heading">V1.1 Beta</string>
    <string name="version1.1Log">-Initial release</string>
    <!-- V1.0 Alpha -->
    <string name="version1.0Heading">V1.0 Alpha</string>
    <string name="version1.0Log">-Never released on playstore</string>
    
    

    <!-- Login activity strings -->

    <string name="app_name">MDroid</string>
    <string name="MDroidLogo">MDroid Logo</string>
    <string name="userName">Username</string>
    <string name="password">Password</string>
    <string name="loginButton">login</string>
    <string name="userOfflinebutton">I\'m offline</string>
    <string name="RememberPassword">Remember password and login automatically</string>

    <!-- Data warning popup strings -->

    <string name="dataWarningHeading">Important notice !</string>
    <string name="dataWarningData">MDroid was developed just to work with IIT Bombay and has been made generic hoping that it could benefit, if not all, at least a few more students like me. I would appreciate if you consider, even if it didn\'t work out for you, the time and efforts I have put in before you rate this
        \n - MDroid never puts notification banners or in-app ads
        \n - While changing server don\'t forget http:\\\\</string>
    <string name="dontShowAgian">Don\'t show again</string>
    <string name="dataWarningButtonText">got it!</string>

    <!-- Developer dialog strings -->

    <string name="developerPicDescription">Developer\'s Image</string>
    <string name="developerHeading">Developed by :</string>
    <string name="developer">Praveen Kumar Pendyala,
        \nDepartment of Electrical Engineering,
        \nIIT Bombay</string>
    <string name="developerText">All the development related to MDroid, which include the app development from scratch, Logos, Website updation, 
        MDroid stats, Video demos and snapshots, are done by the developer. For any issues related to contents of the 
        fore mentioned aspects and privacy concerns you may write directly to the his mailbox,\n
        praveen@praveenkumar.co.in
        \nwith subject as \"MDroid\"</string>
    <string name="creditsExtrasHeading">Special Thanks to</string>
    <string name="creditsExtras">Raghavendra Bommaraju, 
        \nDepartment of CSE, 
        \nIIT Madras for all his techinical support and encouragement.</string>

    <!-- About MDroid dialog Strings -->

    <string name="aboutmdroidText">MDroid is a Moodle application for Android built with an aim to save you the pains of opening moodle website on your mobile browser to download files or viewing forums.</string>
    <string name="MDroidTestedServersHeading">Tested servers</string>
    <string name="MDroidTestedServers">IIT Bombay Moodle - http://moodle.iitb.ac.in
        \nIIT Madras, CSE Moodle - http://www.cse.iitm.ac.in/moodle</string>
    <string name="MDroidContentSourcesHeading">Content sources</string>
    <string name="MDroidContentSources">MDroid fetches contents by opening moodle webpage and parsing the HTML response by looking at patterns to get required data.
    \nAs it uses parsing of strings to get data and not some web services it is not expected to work on all servers as the response strings could vary if the webpage is themed.</string>

    <string name="MDroidCompatibilityHeading">Compatibility</string>
    <string name="MDroidCompatibility">MDroid doesn\'t use any Android version specific tools and is expected to work well irrespective of device model or Android version</string>

    <string name="MDroidBugsHeading">Bugs and Issues</string>
    <string name="MDroidBugs">File extension issues while storing files offline</string>

    <!-- Rating dialog strings -->
    <string name="rateRequestText">A good rating is all I hope for the time I spent in development and continious support.</string>

    <!-- MDroid Help dialog strings -->

    <string name="mdroidhelpTopicsList">Help topics</string>
    <string name="mdroidhelpTopics">Login
        \nCourse listing
        \nFile listing
        \nForums
        \nDiscussions
        \nOffline course listing
        \nOffline file listing
        \nSaving credentials
        \nChanging server
        \nFile opening errors</string>
    <string name="mdroidhelpLoginHeading">Login</string>
    <string name="mdroidhelpLogin">Username - username or LDAP Id for login
        \nPassword - password for login
        \nRemember password - Remembers username and password and takes autologin the next time you open the application.
        \nNOTE: Username is always saved on login irrespective of the above preference.</string>
    <string name="mdroidhelpCourseHeading">Course Listing</string>
    <string name="mdroidhelpCourse">Lists all your courses available under your account on Moodle server</string>
    <string name="mdroidhelpFilesHeading">Files Listing</string>
    <string name="mdroidhelpFiles">Files : Lists files of a selected course
        \nfrom Resources - files of a selected course in the resources section
        \nfrom Forums - files of a selected course uploaded on forums as attachements
        \nDownload - Indicates that the file is not available offline. Click download to make it available offline
        \nOpen - Indicates that file is available and can be opened
        \nDownloading - The file is being downloaded. You can run a maximum of two parllel downloads
        \nAdditional details like the file size and datetime of download are shown for the offline files</string>

    <!-- courseListing Activity strings -->

    <string name="coursesLoadingMessage">Developed by : Praveen Kumar Pendyala</string>

    <!-- filelisting activity strings -->

    <string name="filesFromResoursesHeading">Files from resourses</string>
    <string name="filesFromForumsHeading">Files from forums</string>

    <!-- filelistviewlayout.xml strings -->

    <string name="linearLayoutLoadingText">fetching contents..please wait…"</string>

</resources>