<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/layout_root"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/developerHeading"
            android:textColor="@color/appBlue"
            android:textSize="18dp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/developer"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/developerPicDescription"
            android:src="@drawable/developer" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autoLink="all"
            android:text="@string/developerText"
            android:gravity="center_horizontal"
            android:textColor="@color/white" />
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/creditsExtrasHeading"
            android:textColor="@color/appBlue"
            android:textSize="18dp"
            android:layout_marginTop="20dp" />
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/creditsExtras"
            android:textColor="@color/white"
            android:layout_marginTop="8dp"  />
        
        
    </LinearLayout>

</ScrollView>