<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/backrepeat"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/backrepeat"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="20dp" >

        <ImageView
            android:id="@+id/MDroidLogoimageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/MDroidLogo"
            android:src="@drawable/mdroid" />

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="0dp"
            android:background="@color/greyishwhite"
            android:hint="@string/userName"
            android:inputType="text"
            android:paddingBottom="8dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="8dp"
            android:textColor="@color/appBlue" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="8dp"
            android:background="@color/greyishwhite"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingBottom="8dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="8dp"
            android:textColor="@color/appBlue" />

        <CheckBox
            android:id="@+id/passwordPrefcheckBox"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:checked="true"
            android:text="@string/RememberPassword"
            android:textColor="@color/appBlue"
            android:textSize="12sp" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/green_btn"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/loginButton"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/userOfflineButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/blue_btn"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/userOfflinebutton"
            android:textColor="@color/white" />
    </LinearLayout>

</ScrollView>