<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:layout_gravity="center" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/layout_root"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/textHeading"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:text="@string/dataWarningHeading"
            android:textColor="@color/red"
            android:textSize="22dp" />

        <TextView
            android:id="@+id/textData"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="10dp"
            android:text="@string/dataWarningData"
            android:textColor="@color/white"
            android:textSize="14dp" />

        <CheckBox
            android:id="@+id/dataWarningDialogStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/dontShowAgian"
            android:textColor="@color/appBlue"
            android:textSize="14dp" />
        
        <Button 
            android:id="@+id/dataWarningDialogDismiss"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/blue_btn"
            android:text="@string/dataWarningButtonText"
            android:textSize="16dp"
            android:padding="10dp"
            android:textColor="@color/white"/>
    </LinearLayout>

</ScrollView>